--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/three": "^0.84.30",
     "core-js": "^2.4.1",
+    "html": "^1.0.0",
     "rxjs": "^5.4.2",
+    "three-orbitcontrols-ts": "^0.1.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.2.0",
+    "dat.gui": "^0.6.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
