--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,12 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "types": [],
+    "paths": {
+      "angular-split": [
+        "../node_modules/angular-split/src"
+      ]
+    }
   },
   "exclude": [
     "test.ts",
