--- a/package.json
+++ b/package.json
@@ -12,43 +12,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/animations": "^5.0.5",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "@syncfusion/ej2-navigations": "^15.4.20",
     "@types/three": "^0.84.33",
-    "angular-split": "^0.2.7",
+    "angular-split": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
+    "gs-json": "git+https://git@github.com/phtj/gs-JSON.git",
     "html": "^1.0.0",
+    "nvm": "0.0.4",
     "rxjs": "^5.5.2",
     "three-orbitcontrols-ts": "^0.1.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.4",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/language-service": "^4.4.6",
-    "@types/jasmine": "~2.5.53",
+    "@angular/cli": "1.5.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/language-service": "^5.0.5",
+    "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.92",
-    "codelyzer": "^3.2.2",
+    "@types/node": "^8.0.55",
+    "codelyzer": "^4.0.1",
     "dat.gui": "^0.6.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "protractor": "~5.2.0",
+    "ts-node": "~3.3.0",
+    "tslint": "~5.8.0",
+    "typescript": "~2.6.2"
   }
 }
