--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gs-viewer",
+  "name": "gs-viewer-demo",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^5.0.5",
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/router": "^5.0.5",
+    "gs-viewer": "^1.0.0",
     "hammerjs": "^2.0.8",
     "html": "^1.0.0",
     "rxjs": "^5.5.2",
