--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^5.0.3",
     "@angular/common": "^5.0.5",
     "@angular/compiler": "^5.0.5",
     "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.1.3",
+    "@angular/material": "^5.0.3",
     "@angular/platform-browser": "^5.0.5",
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/router": "^5.0.5",
+    "angular-split": "^1.0.0-rc.0",
     "gs-json": "^0.1.4",
-    "gs-viewer": "^1.0.0",
     "hammerjs": "^2.0.8",
     "html": "^1.0.0",
     "rxjs": "^5.5.2",
+    "three": "^0.89.0",
+    "three-orbit-controls": "^82.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
