--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.1.3",
+    "@angular/cdk": "^5.0.3",
     "@angular/common": "^5.0.5",
     "@angular/compiler": "^5.0.5",
     "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.1.3",
+    "@angular/material": "^5.0.3",
     "@angular/platform-browser": "^5.0.5",
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/router": "^5.0.5",
-    "gs-json": "^0.1.4",
-    "gs-viewer": "^1.0.0",
+    "angular-split": "^1.0.0-rc.0",
+    "gs-json": "^0.1.10",
     "hammerjs": "^2.0.8",
     "html": "^1.0.0",
     "rxjs": "^5.5.2",
+    "three": "^0.89.0",
+    "three-orbit-controls": "^82.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -31,7 +37,7 @@
     "@angular/language-service": "^5.0.5",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.55",
+    "@types/node": "^8.5.8",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
