--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.3",
-    "@angular/cdk": "^5.0.3",
-    "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.1.3",
-    "@angular/material": "^5.0.3",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/router": "^5.0.5",
-    "angular-split": "^1.0.0-rc.0",
-    "gs-json": "^0.1.10",
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.1",
+    "@angular/compiler": "^5.2.1",
+    "@angular/core": "^5.2.1",
+    "@angular/forms": "^5.2.1",
+    "@angular/material": "^5.1.0",
+    "@angular/platform-browser": "^5.2.1",
+    "@angular/platform-browser-dynamic": "^5.2.1",
+    "@angular/router": "^5.2.1",
+    "angular-split": "^1.0.0-rc.1",
+    "gs-json": "^0.1.24",
     "hammerjs": "^2.0.8",
     "html": "^1.0.0",
     "rxjs": "^5.5.2",
@@ -33,12 +33,12 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.0.5",
-    "@angular/language-service": "^5.0.5",
-    "@types/jasmine": "~2.8.2",
+    "@angular/compiler-cli": "^5.2.1",
+    "@angular/language-service": "^5.2.1",
+    "@types/jasmine": "^2.8.4",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.5.8",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^8.5.9",
+    "codelyzer": "^4.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
