--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.1",
-    "@angular/cdk": "^5.1.0",
-    "@angular/common": "^5.2.1",
-    "@angular/compiler": "^5.2.1",
-    "@angular/core": "^5.2.1",
-    "@angular/forms": "^5.2.1",
-    "@angular/material": "^5.1.0",
-    "@angular/platform-browser": "^5.2.1",
-    "@angular/platform-browser-dynamic": "^5.2.1",
-    "@angular/router": "^5.2.1",
+    "@angular/animations": "^5.2.2",
+    "@angular/cdk": "^5.1.1",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/core": "^5.2.2",
+    "@angular/forms": "^5.2.2",
+    "@angular/material": "^5.1.1",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
+    "@angular/router": "^5.2.2",
     "angular-split": "^1.0.0-rc.1",
-    "gs-json": "^0.1.30",
+    "gs-json": "^0.1.42",
     "hammerjs": "^2.0.8",
     "html": "^1.0.0",
+    "ngx-pagination": "^3.0.3",
     "rxjs": "^5.5.2",
     "three": "^0.89.0",
     "three-orbit-controls": "^82.1.0",
@@ -33,9 +34,9 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.2.1",
-    "@angular/language-service": "^5.2.1",
-    "@types/jasmine": "^2.8.5",
+    "@angular/compiler-cli": "^5.2.2",
+    "@angular/language-service": "^5.2.2",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.5.9",
     "codelyzer": "^4.1.0",
@@ -44,7 +45,7 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.0",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.0",
