--- a/package.json
+++ b/package.json
@@ -5,47 +5,49 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href=https://phtj.github.io/gs-viewer/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.2",
-    "@angular/cdk": "^5.1.1",
-    "@angular/common": "^5.2.2",
-    "@angular/compiler": "^5.2.2",
-    "@angular/core": "^5.2.2",
-    "@angular/forms": "^5.2.2",
-    "@angular/material": "^5.1.1",
-    "@angular/platform-browser": "^5.2.2",
-    "@angular/platform-browser-dynamic": "^5.2.2",
-    "@angular/router": "^5.2.2",
-    "angular-split": "^1.0.0-rc.1",
-    "gs-json": "^0.1.42",
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "angular-split": "^1.0.0-rc.3",
+    "gs-json": "^0.1.65",
     "hammerjs": "^2.0.8",
     "html": "^1.0.0",
-    "ngx-pagination": "^3.0.3",
-    "rxjs": "^5.5.2",
+    "material": "^0.2.6",
+    "ngx-pagination": "^3.1.0",
+    "rxjs": "^5.5.7",
     "three": "^0.89.0",
     "three-orbit-controls": "^82.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.2.2",
-    "@angular/language-service": "^5.2.2",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
+    "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.5.9",
-    "codelyzer": "^4.1.0",
+    "@types/node": "^8.9.5",
+    "codelyzer": "^4.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.0",
