--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href=https://phtj.github.io/gs-viewer/",
+    "build": "ng build --base-href=https://design-automation.github.io/gs-viewer/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
